- fixed missing spaces in autocomplete options - better number formatting in sketchegine connection corpus list

--- a/website/css/lexonomy.css
+++ b/website/css/lexonomy.css
@@ -553,6 +553,7 @@ table.striped thead tr{
    padding: 0!important;
    display: flex;
    align-items: center;
+   white-space: pre;
 }
 .autocomplete-content .info{
    color: #9e9e9e !important;
